--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "AUTO FILTER BOT",
+    "name": "📥📥AUTO POWER FILTER BOT📥📥",
     "description": "When you going to send file on telegram channel this bot will save that in database, So you can search that easily in inline mode",
     "keywords": [
       "telegram",
