--- a/app.json
+++ b/app.json
@@ -14,8 +14,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/zmraj/POWER-Filter-BOT.git",
-    "repository": "https://github.com/zmraj/POWER-Filter-BOT.git",
+    "website": "https://github.com/SAmkazx/Auto-filterz",
+    "repository": "https://github.com/SAmkazx/Auto-filterz",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
